fable/test/valid/read_star.f
      program prog
      dimension nums(2)
      read(5, *) num
      write(6, *) num+1
      read(5, *) val
      write(6, *) val+1
      read(5, *) nums
      write(6, *) nums
      end
