fable/test/semantic_error/recursion_in_declaration.f
      program prog
      dimension nums(nums)
      num = nums(1)
      end
